@@ -1,6 +1,6 @@
 begin_unit
 begin_comment
-comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 begin_package
 DECL|package|org.apache.solr.schema
@@ -156,6 +156,13 @@ return|return;
 comment|// Test the cause too in case the expected error is wrapped
 if|if
 condition|(
+literal|null
+operator|!=
+name|e
+operator|.
+name|getCause
+argument_list|()
+operator|&&
 operator|-
 literal|1
 operator|!=
@@ -204,8 +211,6 @@ name|schema
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testSevereErrorsForInvalidFieldOptions
 specifier|public
 name|void
@@ -243,8 +248,6 @@ literal|"bad_field"
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testSevereErrorsForDuplicateFields
 specifier|public
 name|void
@@ -261,8 +264,6 @@ literal|"fAgain"
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testSevereErrorsForDuplicateDynamicField
 specifier|public
 name|void
@@ -279,8 +280,6 @@ literal|"_twice"
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testSevereErrorsForDuplicateFieldType
 specifier|public
 name|void
@@ -297,8 +296,6 @@ literal|"ftAgain"
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testSevereErrorsForUnexpectedAnalyzer
 specifier|public
 name|void
@@ -315,8 +312,6 @@ literal|"StrField (bad_type)"
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testBadExternalFileField
 specifier|public
 name|void
@@ -330,6 +325,29 @@ argument_list|(
 literal|"bad-schema-external-filefield.xml"
 argument_list|,
 literal|"Only float and pfloat"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testUniqueKeyRules
+specifier|public
+name|void
+name|testUniqueKeyRules
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|doTest
+argument_list|(
+literal|"bad-schema-uniquekey-is-copyfield-dest.xml"
+argument_list|,
+literal|"can not be the dest of a copyField"
+argument_list|)
+expr_stmt|;
+name|doTest
+argument_list|(
+literal|"bad-schema-uniquekey-uses-default.xml"
+argument_list|,
+literal|"can not be configured with a default value"
 argument_list|)
 expr_stmt|;
 block|}
